# chatter-base

./: .gitignore  README.md  pyproject.toml
chatter_base/: __init__.py  main.py  settings.py
